# mandelbrot

./: Cargo.toml  README.md  mandelbrot.txt  settings.toml
src/: lib.rs
