[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive", "cargo"] }
# anyhow = "1.0.69"
console = "0.15.5"
image = "0.24.5"
indicatif = "0.17.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
# termion = "2.0.1"
# tui = { version = "0.19.0", features = ["termion"] }
